# context

./: .gitignore  Makefile  README.md  pyproject.toml
.cursor/context/: astral-sh-ruff.txt  astral-sh-uv.txt  delgan-loguru.txt  docling-project-docling.txt  fastapi-fastapi.txt  fastapi-typer.txt  fastmcp-llms-full.txt  fuma-nama-fumadocs.txt  github-actions_website-content-crawler_2025-05-08_06-44.json  gitingest.txt  jlowin-fastmcp.txt  modelcontextprotocol-modelcontextprotocol.txt  shadcn-ui_website-content-crawler_2025-05-08_06-31.json  textualize-rich.txt  tmp.md.txt  tqdm-tqdm.txt  unclecode-crawl4ai.txt  zsh_website-content-crawler_2025-05-08_06-52.json
context/: api.py  cli.py  enums.py  models.py  server.py  utils.py
context/processors/: base.py
docs/: next.config.mjs  package.json  pnpm-lock.yaml  source.config.ts
docs/app/: global.css  layout.config.tsx  layout.provider.tsx  layout.tsx
docs/app/(home)/: layout.tsx  page.tsx
docs/app/api/search/: route.ts
docs/app/docs/: layout.tsx
docs/app/docs/[[...slug]]/: page.tsx
docs/components/ui/: button.tsx  card.tsx  header.tsx  theme-toggle.tsx
docs/content/docs/: contributing.mdx  details.mdx  index.mdx  installation.mdx  meta.json  resources.mdx  stack.mdx
docs/content/docs/examples/: api.mdx  cli.mdx  mcp.mdx  meta.json  python.mdx
